--- a/src/app/city-search/city-search.component.css
+++ b/src/app/city-search/city-search.component.css
@@ -1,17 +1,3 @@
-.search-box-partial {
-  width: 254px;
-}
-
-.search-box-full {
-  width: 300px;
-}
-
-.clear-button {
-  display: inline-block;
-  width: 48px;
-  color: gray;
-}
-
-.center {
-  text-align: center;
+form {
+  margin-top: 2rem;
 }
