--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $local-weather-app-primary: mat.define-palette(mat.$red-palette, 500);
-$local-weather-app-accent: mat.define-palette(mat.$grey-palette, 500);
+$local-weather-app-accent: mat.define-palette(mat.$indigo-palette, A400);
 
 // The warn palette is optional (defaults to red).
 $local-weather-app-warn: mat.define-palette(mat.$red-palette);
@@ -28,21 +28,6 @@ $local-weather-app-theme: mat.define-light-theme(
     ),
   )
 );
-
-// create a dark theme
-$local-weather-app-dark-theme: mat.define-dark-theme(
-  (
-    color: (
-      primary: $local-weather-app-primary,
-      accent: $local-weather-app-accent,
-      warn: $local-weather-app-warn,
-    ),
-  )
-);
-
-.dark-theme {
-  @include mat.all-component-colors($local-weather-app-dark-theme);
-}
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
